--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
     <link
@@ -18,37 +18,98 @@
       rel="stylesheet"
     />
     <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://kit.fontawesome.com/898caba19e.js"
       crossorigin="anonymous"
     ></script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
-
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <div class="main">
-      <h1>Olesia Kononova</h1>
-      <hr />
-      <h2>Fashion Designer & Front-end Developer based in Europe</h2>
-      <div>
-        <a href="#" class="btn btn-outline-dark mt-4">Contact me</a>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/work.html">My work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="links mt-4">
-      <a href="https://www.instagram.com/" target="_blank"
-        ><i class="fa-brands fa-instagram"></i
-      ></a>
-      <a href="https://www.facebook.com/" target="_blank"
-        ><i class="fa-brands fa-facebook"></i
-      ></a>
-      <a href="https://github.com/Olesia20" target="_blank"
-        ><i class="fa-brands fa-github"></i
-      ></a>
+    </nav>
+    <div class="homepage">
+      <div class="main">
+        <h1>Olesia Kononova</h1>
+        <hr />
+        <h2>Fashion Designer & Front-end Developer based in Europe</h2>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 text-center mt-5">
+            <img src="images/2.png" class="img-fluid" alt="" width="350px" />
+            <a href="work.html">
+              <h4 class="mt-4 text-center">Fashion show</h4></a
+            >
+          </div>
+          <div class="col-lg-6 text-center mt-5">
+            <img src="images/7.jpg" class="img-fluid" alt="" width="350px" />
+            <a href="work.html">
+              <h4 class="mt-4 text-center">Pattern work</h4></a
+            >
+          </div>
+          <div class="col-lg-6 text-center mt-5">
+            <img
+              src="images/weather.png"
+              class="img-fluid"
+              alt=""
+              width="450px"
+            />
+            <a href="work.html">
+              <h4 class="mt-4 text-center">Weather app</h4></a
+            >
+          </div>
+          <div class="col-lg-6 text-center mt-5">
+            <img
+              src="images/ukraine.png"
+              class="img-fluid"
+              alt=""
+              width="450px"
+            />
+            <a href="/work.html">
+              <h4 class="mt-4 text-center">Ukraine app</h4></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="button">
+        <a href="#" class="btn btn-outline-dark mt-5">Contact me</a>
+      </div>
+      <div class="links mt-4 mb-4">
+        <a href="https://www.instagram.com/" target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://www.facebook.com/" target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://github.com/Olesia20" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+      </div>
     </div>
   </body>
 </html>
