--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/index.html">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,20 +45,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link active" aria-current="page" href="/about.html"
+              >About</a
+            >
+            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
           </div>
         </div>
       </div>
     </nav>
     <div class="homepage">
-      <div class="main">
-        <h1>Olesia Kononova</h1>
-        <hr />
-        <h2>Fashion Designer & Front-end Developer based in Europe</h2>
-      </div>
+      <h1>Olesia Kononova</h1>
+      <hr />
+      <h2 class="text-center">
+        Fashion Designer & Front-end Developer based in Europe
+      </h2>
+
       <div class="container">
         <div class="row">
           <div class="col-lg-6 text-center mt-5">
@@ -98,16 +100,21 @@
         </div>
       </div>
       <div class="button">
-        <a href="#" class="btn btn-outline-dark mt-5">Contact me</a>
+        <a href="/contact.html" class="btn btn-outline-dark mt-5 shadow-lg"
+          >Contact me</a
+        >
       </div>
       <div class="links mt-4 mb-4">
         <a href="https://www.instagram.com/" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
+          ><i class="fa-brands fa-instagram" title="instagram link"></i
         ></a>
-        <a href="https://www.facebook.com/" target="_blank"
+        <a
+          href="https://www.facebook.com/"
+          title="Facebook link"
+          target="_blank"
           ><i class="fa-brands fa-facebook"></i
         ></a>
-        <a href="https://github.com/Olesia20" target="_blank"
+        <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
           ><i class="fa-brands fa-github"></i
         ></a>
       </div>
