--- a/about.html
+++ b/about.html
@@ -28,5 +28,70 @@
     ></script>
     <link rel="stylesheet" href="src/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="/about.html"
+              >About</a
+            >
+            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <h1>About Olesia</h1>
+    <hr />
+    <h2 class="text-center">Fashion Designer & Front-end Developer based in Europe</h2>
+    <div class="container text-center">
+      <div class="row mt-5">
+          <div class="col-lg-6">
+          <img src="images/10.jpg" width="300px" class="img-fluid" alt="" />
+        </div>
+        <div class="col-lg-6">
+          <p class="text-start p-5">
+            Hello, I'm Olesia! I worked as a designer of women's clothing for
+            more than 15 years, but in the spring of 2022, the war changed my
+            path. so now I'm deeply learning coding and want to try myself in
+            this direction. I found a great opportunity to learn with the
+            SheCodes team
+          </p>      
+        </div>
+        <div class="button">
+      <a href="/work.html"> <button class="btn btn-outline-dark mt-5 mb-2 shadow-lg">See my projects</button>
+            </a>
+            </div>
+      </div>
+    </div>
+
+      <div class="links mt-4 mb-4">
+        <a href="https://www.instagram.com/" target="_blank"
+          ><i class="fa-brands fa-instagram" title="instagram link"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          title="Facebook link"
+          target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
+      </div>
+    </div>
+  </body>
 </html>
