Changed about page padding

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
           <img src="images/10.jpg" width="300px" class="img-fluid" alt="" />
         </div>
         <div class="col-lg-6">
-          <p class="text-start p-5">
+          <p class="text-start">
             Hello, I'm Olesia! I worked as a designer of women's clothing for
             more than 15 years, but in the spring of 2022, the war changed my
             path. so now I'm deeply learning coding and want to try myself in
