--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     <div class="container text-center">
       <div class="row mt-5">
           <div class="col-lg-6">
-          <img src="images/10.jpg" width="300px" class="img-fluid" alt="" />
+          <img src="images/10.jpg" width="300px" class="img-fluid mb-5" alt="" />
         </div>
         <div class="col-lg-6">
           <p class="text-start">
