Added work page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               alt=""
               width="450px"
             />
-            <a href="work.html">
+            <a href="https://cheerful-youtiao-b57c39.netlify.app/">
               <h4 class="mt-4 text-center">Weather app</h4></a
             >
           </div>
@@ -93,7 +93,7 @@
               alt=""
               width="450px"
             />
-            <a href="/work.html">
+            <a href="https://fabulous-belekoy-ceb011.netlify.app/">
               <h4 class="mt-4 text-center">Ukraine app</h4></a
             >
           </div>
