--- a/work.html
+++ b/work.html
@@ -57,6 +57,86 @@
     <h1>My work</h1>
     <hr />
     <h4>Fashion show</h4>
-    <a href="/index.html">homepage</a>
+    <div
+      id="carouselExampleControlsNoTouching"
+      class="carousel slide main-page"
+      data-bs-touch="false"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/2.png" class="w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/3.jpeg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/4.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/5.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/6.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/7.jpeg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/8.jpeg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/9.jpeg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/13.jpeg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/14.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/2a.jpeg" class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleControlsNoTouching"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleControlsNoTouching"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="container">
+      <div class="row mt-lg-5">
+        <div class="col-lg-2">
+          <img src="images/2.png" class="img-fluid" width="350px" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/3.jpeg" class="img-fluid" width="350px" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/4.jpg" class="img-fluid" width="350px" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/5.jpg" class="img-fluid" width="350px" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/6.jpg" class="img-fluid" width="350px" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/8.jpeg" class="img-fluid" width="350px" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
