work page changes

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 text-center mt-5">
-            <img src="images/2.png" class="img-fluid" alt="" width="350px" />
+            <img src="images/23.jpg" class="img-fluid" alt="" />
             <a href="work.html">
               <h4 class="mt-4 text-center">Fashion show</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <img src="images/7.jpg" class="img-fluid" alt="" width="350px" />
+            <img src="images/15.jpg" class="img-fluid" alt="" />
             <a href="work.html">
               <h4 class="mt-4 text-center">Pattern work</h4></a
             >
