--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/2.png" class="w-100" alt="..." />
+          <img src="images/2.jpg" class="w-100" alt="..." />
         </div>
         <div class="carousel-item">
           <img src="images/3.jpeg" class="d-block w-100" alt="..." />
@@ -96,6 +96,45 @@
         <div class="carousel-item">
           <img src="images/2a.jpeg" class="d-block w-100" alt="..." />
         </div>
+        <div class="carousel-item">
+          <img src="images/16.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/17.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/18.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/19.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/20.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/21.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/22.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/23.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/24.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/25.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/26.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/27.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/28.jpg" class="d-block w-100" alt="..." />
+        </div>
       </div>
       <button
         class="carousel-control-prev"
@@ -116,25 +155,25 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="container">
-      <div class="row mt-lg-5">
+    <div class="container mb-5">
+      <div class="row">
         <div class="col-lg-2">
-          <img src="images/2.png" class="img-fluid" width="350px" alt="" />
+          <img src="images/2.jpg" class="img-fluid mt-3" alt="" />
         </div>
         <div class="col-lg-2">
-          <img src="images/3.jpeg" class="img-fluid" width="350px" alt="" />
+          <img src="images/3.jpeg" class="img-fluid mt-3" alt="" />
         </div>
         <div class="col-lg-2">
-          <img src="images/4.jpg" class="img-fluid" width="350px" alt="" />
+          <img src="images/4.jpg" class="img-fluid mt-3" alt="" />
         </div>
         <div class="col-lg-2">
-          <img src="images/5.jpg" class="img-fluid" width="350px" alt="" />
+          <img src="images/5.jpg" class="img-fluid mt-3" alt="" />
         </div>
         <div class="col-lg-2">
-          <img src="images/6.jpg" class="img-fluid" width="350px" alt="" />
+          <img src="images/6.jpg" class="img-fluid mt-3" alt="" />
         </div>
         <div class="col-lg-2">
-          <img src="images/8.jpeg" class="img-fluid" width="350px" alt="" />
+          <img src="images/7.jpeg" class="img-fluid mt-3" alt="" />
         </div>
       </div>
     </div>
