--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <i class="fa-solid fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
@@ -76,23 +76,13 @@
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <img
-              src="images/weather.png"
-              class="img-fluid"
-              alt=""
-              width="450px"
-            />
+            <img src="images/weather.png" class="img-fluid" alt="" />
             <a href="https://cheerful-youtiao-b57c39.netlify.app/">
               <h4 class="mt-4 text-center">Weather app</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <img
-              src="images/ukraine.png"
-              class="img-fluid"
-              alt=""
-              width="450px"
-            />
+            <img src="images/ukraine.png" class="img-fluid" alt="" />
             <a href="https://fabulous-belekoy-ceb011.netlify.app/">
               <h4 class="mt-4 text-center">Ukraine app</h4></a
             >
