Work page added images

--- a/index.html
+++ b/index.html
@@ -64,25 +64,33 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 text-center mt-5">
-            <img src="images/23.jpg" class="img-fluid" alt="" />
+            <a href="/work.html"
+              ><img src="images/23.jpg" class="img-fluid" alt=""
+            /></a>
             <a href="work.html">
               <h4 class="mt-4 text-center">Fashion show</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <img src="images/15.jpg" class="img-fluid" alt="" />
-            <a href="work.html">
+            <a href="work.html#pattern"
+              ><img src="images/15.jpg" class="img-fluid" alt=""
+            /></a>
+            <a href="work.html#pattern">
               <h4 class="mt-4 text-center">Pattern work</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <img src="images/weather.png" class="img-fluid" alt="" />
+            <a href="https://cheerful-youtiao-b57c39.netlify.app/"
+              ><img src="images/weather.png" class="img-fluid" alt=""
+            /></a>
             <a href="https://cheerful-youtiao-b57c39.netlify.app/">
               <h4 class="mt-4 text-center">Weather app</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <img src="images/ukraine.png" class="img-fluid" alt="" />
+            <a href="https://fabulous-belekoy-ceb011.netlify.app/"
+              ><img src="images/ukraine.png" class="img-fluid" alt=""
+            /></a>
             <a href="https://fabulous-belekoy-ceb011.netlify.app/">
               <h4 class="mt-4 text-center">Ukraine app</h4></a
             >
