--- a/work.html
+++ b/work.html
@@ -57,12 +57,13 @@
     <h1>My work</h1>
     <hr />
     <h4>Fashion show</h4>
+    <h4>Pattern Illustration</h4>
     <div
       id="carouselExampleControlsNoTouching"
       class="carousel slide main-page"
       data-bs-touch="false"
     >
-      <div class="carousel-inner">
+      <div class="carousel-inner mt-5">
         <div class="carousel-item active">
           <img src="images/2.jpg" class="w-100" alt="..." />
         </div>
@@ -174,6 +175,144 @@
         </div>
         <div class="col-lg-2">
           <img src="images/7.jpeg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/8.jpeg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/9.jpeg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/13.jpeg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/14.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/2a.jpeg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/16.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/17.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/18.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/19.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/20.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/21.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/22.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/23.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/24.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/25.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/26.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/27.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/28.jpg" class="img-fluid mt-3" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <h2 class="text-center">Pattern illustration</h2>
+
+    <hr />
+    <div id="pattern" class="container">
+      <div class="row mt-5">
+        <div class="col-lg-6">
+          <img src="images/1.png" class="photo" alt="" />
+        </div>
+        <div class="paragraf col-lg-6">
+          <p>
+            This collection is decorated with a print inspired by the Ukrainian
+            ceramics tradition. It contains drawings from two plates. Pyotr
+            Markovich's chickens and Zinovy Bereza's deer meet on the fabric
+          </p>
+        </div>
+      </div>
+    </div>
+    <div
+      id="carouselExampleInterval"
+      class="carousel slide mb-5 second-page"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="images/30.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="images/31.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/32.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/33.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/34.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="images/35.jpg" class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleInterval"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleInterval"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-2">
+          <img src="images/30.jpg" class="img-fluid mb-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/31.jpg" class="img-fluid mb-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/32.jpg" class="img-fluid mb-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/33.jpg" class="img-fluid mb-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/34.jpg" class="img-fluid mb-3" alt="" />
+        </div>
+        <div class="col-lg-2">
+          <img src="images/35.jpg" class="img-fluid mb-3" alt="" />
         </div>
       </div>
     </div>
