Added responsive photo

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
-            <a href="work.html#pattern"
+            <a href="/work.html#pattern"
               ><img src="images/15.jpg" class="img-fluid" alt=""
             /></a>
-            <a href="work.html#pattern">
+            <a href="/work.html#pattern">
               <h4 class="mt-4 text-center">Pattern work</h4></a
             >
           </div>
