--- a/work.html
+++ b/work.html
@@ -56,8 +56,10 @@
     </nav>
     <h1>My work</h1>
     <hr />
-    <h4>Fashion show</h4>
-    <h4>Pattern Illustration</h4>
+    <div class="d-flex justify-content-evenly">
+      <a href="/work.html#fashion"> <h4>Fashion show</h4></a>
+      <a href="work.html#pattern"> <h4>Pattern Illustration</h4></a>
+    </div>
     <div
       id="carouselExampleControlsNoTouching"
       class="carousel slide main-page"
@@ -156,7 +158,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="container mb-5">
+    <div id="fashion" class="container mb-5">
       <div class="row">
         <div class="col-lg-2">
           <img src="images/2.jpg" class="img-fluid mt-3" alt="" />
@@ -232,11 +234,11 @@
         </div>
       </div>
     </div>
-
-    <h2 class="text-center">Pattern illustration</h2>
-
+    <div id="pattern">
+      <h2 class="text-center">Pattern illustration</h2>
+    </div>
     <hr />
-    <div id="pattern" class="container">
+    <div class="container">
       <div class="row mt-5">
         <div class="col-lg-6">
           <img src="images/1.png" class="photo" alt="" />
@@ -314,6 +316,20 @@
         <div class="col-lg-2">
           <img src="images/35.jpg" class="img-fluid mb-3" alt="" />
         </div>
+      </div>
+      <div class="links mt-4 mb-4">
+        <a href="https://www.instagram.com/" target="_blank"
+          ><i class="fa-brands fa-instagram" title="instagram link"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/"
+          title="Facebook link"
+          target="_blank"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+          ><i class="fa-brands fa-github"></i
+        ></a>
       </div>
     </div>
   </body>
