Contact page added

--- a/about.html
+++ b/about.html
@@ -64,22 +64,22 @@
         </div>
         <div class="col-lg-6">
           <p class="text-start">
-            Hello, I'm Olesia! I worked as a designer of women's clothing for
+            Hello, I'm Olesia! I worked in Ukraine as a designer of women's clothing for
             more than 15 years, but in the spring of 2022, the war changed my
-            path. so now I'm deeply learning coding and want to try myself in
-            this direction. I found a great opportunity to learn with the
-            SheCodes team
+            path. So now I currently live i Germany and deeply learning coding and want to try myself in
+            this direction. I found a great opportunity to learn with an amazing
+            SheCodes team. With the SheCodes team, learning coding is really easy ad undestandable
           </p>      
         </div>
         <div class="button">
-      <a href="/work.html"> <button class="btn btn-outline-dark mt-5 mb-2 shadow-lg">See my projects</button>
+      <a href="/index.html#weather"> <button class="btn btn-outline-dark mt-5 mb-2 shadow-lg">See my projects</button>
             </a>
             </div>
       </div>
     </div>
 
       <div class="links mt-4 mb-4">
-        <a href="https://www.instagram.com/" target="_blank"
+        <a href="https://www.instagram.com/olesiakononova/" target="_blank"
           ><i class="fa-brands fa-instagram" title="instagram link"></i
         ></a>
         <a
