--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact Olesia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -54,5 +54,29 @@
         </div>
       </div>
     </nav>
+    <h1 class="text-center">Contact</h1>
+    <hr />
+    <div>
+      <h5>Get in Touch</h5>
+      <footer>
+        <a
+          href="mailto:ifocooll.col@gmail.com"
+          class="email-link mb-5"
+          title="mail"
+          >ifocooll.col@gmail.com</a
+        >
+      </footer>
+    </div>
+    <div class="links mt-4 mb-4">
+      <a href="https://www.instagram.com/olesiakononova/" target="_blank"
+        ><i class="fa-brands fa-instagram" title="instagram link"></i
+      ></a>
+      <a href="https://www.facebook.com/" title="Facebook link" target="_blank"
+        ><i class="fa-brands fa-facebook"></i
+      ></a>
+      <a href="https://github.com/Olesia20" title="Github lik" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
+    </div>
   </body>
 </html>
