--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <h4 class="mt-4 text-center">Pattern work</h4></a
             >
           </div>
-          <div class="col-lg-6 text-center mt-5">
+          <div id="weather" class="col-lg-6 text-center mt-5">
             <a href="https://cheerful-youtiao-b57c39.netlify.app/"
               ><img src="images/weather.png" class="img-fluid" alt=""
             /></a>
@@ -95,6 +95,17 @@
               <h4 class="mt-4 text-center">Ukraine app</h4></a
             >
           </div>
+          <div class="text-center">
+            <a
+              href="https://joyful-granita-e16e66.netlify.app/"
+              target="_blank"
+            >
+              <img src="images/portfolio.png" class="img-fluid" alt=""
+            /></a>
+            <a href="https://joyful-granita-e16e66.netlify.app/" target="_blank"
+              ><h4 class="mt-4">Portfolio app</h4></a
+            >
+          </div>
         </div>
       </div>
       <div class="button">
@@ -103,7 +114,7 @@
         >
       </div>
       <div class="links mt-4 mb-4">
-        <a href="https://www.instagram.com/" target="_blank"
+        <a href="https://www.instagram.com/olesiakononova/" target="_blank"
           ><i class="fa-brands fa-instagram" title="instagram link"></i
         ></a>
         <a
