--- a/work.html
+++ b/work.html
@@ -318,7 +318,7 @@
         </div>
       </div>
       <div class="links mt-4 mb-4">
-        <a href="https://www.instagram.com/" target="_blank"
+        <a href="https://www.instagram.com/olesiakononova/" target="_blank"
           ><i class="fa-brands fa-instagram" title="instagram link"></i
         ></a>
         <a
