Added about changes

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
             more than 15 years, but in the spring of 2022, the war changed my
             path. So now I currently live i Germany and deeply learning coding and want to try myself in
             this direction. I found a great opportunity to learn with an amazing
-            SheCodes team. With the SheCodes team, learning coding is really easy ad undestandable
+            SheCodes team. With the SheCodes team, learning coding is really easy ad undestandable.
           </p>      
         </div>
         <div class="button">
