--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
     <div class="homepage">
       <h1>Olesia Kononova</h1>
       <hr />
-      <h2 class="text-center">
-        Fashion Designer & Front-end Developer based in Europe
-      </h2>
+      <h2>Fashion Designer & Front-end Developer based in Europe</h2>
 
       <div class="container">
         <div class="row">
@@ -67,24 +65,20 @@
             <a href="/work.html"
               ><img src="images/23.jpg" class="img-fluid" alt=""
             /></a>
-            <a href="work.html">
-              <h4 class="mt-4 text-center">Fashion show</h4></a
-            >
+            <a href="work.html"> <h4 class="mt-4">Fashion show</h4></a>
           </div>
           <div class="col-lg-6 text-center mt-5">
             <a href="/work.html#pattern"
               ><img src="images/15.jpg" class="img-fluid" alt=""
             /></a>
-            <a href="/work.html#pattern">
-              <h4 class="mt-4 text-center">Pattern work</h4></a
-            >
+            <a href="/work.html#pattern"> <h4 class="mt-4">Pattern work</h4></a>
           </div>
           <div id="weather" class="col-lg-6 text-center mt-5">
             <a href="https://cheerful-youtiao-b57c39.netlify.app/"
               ><img src="images/weather.png" class="img-fluid" alt=""
             /></a>
             <a href="https://cheerful-youtiao-b57c39.netlify.app/">
-              <h4 class="mt-4 text-center">Weather app</h4></a
+              <h4 class="mt-4">Weather app</h4></a
             >
           </div>
           <div class="col-lg-6 text-center mt-5">
@@ -92,7 +86,7 @@
               ><img src="images/ukraine.png" class="img-fluid" alt=""
             /></a>
             <a href="https://fabulous-belekoy-ceb011.netlify.app/">
-              <h4 class="mt-4 text-center">Ukraine app</h4></a
+              <h4 class="mt-4">Ukraine app</h4></a
             >
           </div>
           <div class="text-center">
