--- a/work.html
+++ b/work.html
@@ -54,7 +54,7 @@
         </div>
       </div>
     </nav>
-    <h1>My work</h1>
+    <h1 id="top">My work</h1>
     <hr />
     <div class="d-flex justify-content-evenly">
       <a href="/work.html#fashion"> <h4>Fashion show</h4></a>
@@ -316,6 +316,9 @@
         <div class="col-lg-2">
           <img src="images/35.jpg" class="img-fluid mb-3" alt="" />
         </div>
+      </div>
+      <div class="scrollUp">
+        <a href="work.html#top"><i class="fa-solid fa-chevron-up"></i></a>
       </div>
       <div class="links mt-4 mb-4">
         <a href="https://www.instagram.com/olesiakononova/" target="_blank"
