--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     </nav>
     <h1>About Olesia</h1>
     <hr />
-    <h2 class="text-center">Fashion Designer & Front-end Developer based in Europe</h2>
+    <h2>Fashion Designer & Front-end Developer based in Europe</h2>
     <div class="container text-center">
       <div class="row mt-5">
           <div class="col-lg-6">
